--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.5.0'
+
     repositories {
         google()
         mavenCentral()
@@ -12,6 +14,22 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+ext {
+    activityVersion = '1.4.0'
+    appCompatVersion = '1.4.0'
+    constraintLayoutVersion = '2.1.2'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.5.0'
+    lifecycleVersion = '2.4.0'
+    materialVersion = '1.3.0'
+    roomVersion = '2.4.0-rc01'
+    // testing
+    junitVersion = '4.13.2'
+    espressoVersion = '3.1.0'
+    androidxJunitVersion = '1.1.2'
+}
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
