--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="com.alexsykes.roomwithaview">
 
     <application
+        android:name=".WordsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoomWithAView">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".NewWordActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
